# PURE_opencv

./: CMakeLists.txt  collector.py  stitcher.cpp  stitchtest
